first prototype db, isnt working

--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "connectionString": "Server=localhost\\SQLEXPRESS;Database=woker;Trusted_Connection=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
