--- a/TaskManager/TaskManagerUI.csproj
+++ b/TaskManager/TaskManagerUI.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Content\" />
+    <Folder Include="Views\Shared\Authorizated\" />
   </ItemGroup>
 
 </Project>
