--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "connectionString": "Server=localhost\\SQLEXPRESS;Database=woker;Trusted_Connection=True",
+  "connectionString": "Server=DESKTOP-AOB4S36\\SQLEXPRESS;Database=woker;Trusted_Connection=True",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
